--- a/Report.qmd
+++ b/Report.qmd
@@ -7,7 +7,7 @@ indent: true
 whitespace: small
 ---
 
-# I. Introduction 
+# I. Introduction
 
 Along the St. Mary’s River in Michigan, there are shores being affected by the wake of ships passing through. These wakes can be between one and three meters large and eventually stir up the areas of the river and cause plant disruption. In order to understand the effect of these waves, the density of the plants, bulrush and cattail need to be found. In this specific study, there were four different collection sites, each with a control side and an exposed side.  Each data collection included certain characteristics of the data sight collection. Some of the important ones include exposure, water depth, slope, fetch, and cost distance. The main goal of the data analysis was to create a predictive model that would output the density or presence/absence of these plants in this river.
 
@@ -109,7 +109,7 @@ $$
 \text{Where } \lambda_i = e^{x_i\beta} 
 $$
 
-#### II.b.3. Mixed-Effect Models 
+#### II.b.3. Mixed-Effect Models
 
 Due to the cluster aspect of the data and four different collection sites, a mixed effect model was assumed to be an accurate representation of the data. The clustered nature of the locations causes a lack of independent, which indicates that a random effect would help represent these clusters. Using the lme4 package in R, a mixed effect model can be used. The first model ran was just a baseline model with the individual sites being a random effect and the only explanatory variable, using the full data set. Using this model, the calculated r-squared was found to be 15.85%, so about 15.85% of the variance was due to the clustered nature of the sites. Within each of these sites, exposure was nested, therefore adding exposure to the model as a fixed effect. This model now had a lower r-squared of 11.46%. Comparing the baseline model with model with exposure, using a log-likelihood test, the model with exposure included was better. This was also consistent with the AIC and BIC values found. Another model was run including water depth as another explanatory variable. The r-squared was found to be about 12.85%, and running the same likelihood tests, the full model was better. The last model ran was the full model plus an interaction term which was slightly better, there was not much of a difference.
 
@@ -127,7 +127,7 @@ Furthermore, the Poisson mean is calculated using the coefficient estimates for 
 
 Lastly, our random intercept effects follow a normal distribution centered at a mean of 0 and a standard deviation derived from variance observed across *site_individual*.
 
-#### **II.b.4.2.  Global Logistic Regression**
+#### **II.b.4.2. Global Logistic Regression**
 
 The global logistic regression model constructed instead removes the zero-inflated aspect of the prior model. This model loses the nuance of root density counts in favor of simplicity and ease of interpretation. The underlying distribution is assumed to be a Bernoulli process with the following formation:
 
@@ -605,13 +605,176 @@ anova(model4, model3)
 ##### V.e. ZIM with Mixed Effect
 
 ```{r}
-#model01 <- glmmTMB(density ~ exposure + water_depth + (1 | site_individual),
- #                   ziformula = ~ 1, 
-  #                  family = "genpois",
-   #                 data = wave4)
-#summary(model01)
-#r.squaredGLMM(model01)
-#AIC(model01)
+# model01 <- glmmTMB(density ~ exposure + water_depth + (1 | site_individual),
+#                    ziformula = ~ 1,
+#                    family = "genpois",
+#                    data = wave4)
+# summary(model01)
+# r.squaredGLMM(model01)
+# AIC(model01)
 ```
 
-#### Final Models
+#### VI. Final Models
+
+##### VI.a. Global ZIM
+
+```{r}
+coords <- cbind(wave4$latitude, wave4$longitude)
+distances <- seq(0.00012, 0.001, by = 0.000001)
+values <- numeric(length(distances))
+values[] <- NA  
+mmi <- -Inf  
+od <- NA
+neighbors <- NULL
+weights <- NULL
+options(warn = -1)
+for (i in seq_along(distances)) {
+  neighbors <- dnearneigh(coords, d1 = 0, d2 = distances[i]) #insert cords
+  if (sum(card(neighbors)) == 0) { next }
+  dists <- nbdists(neighbors, coords) # and here
+  weights <- nb2listw(neighbors, 
+                        glist = lapply(dists, function(x) 1 / x), 
+                        style = "W", 
+                        zero.policy = TRUE)
+  moran_results <- moran(wave4$density, weights, length(neighbors), Szero(weights)) #insert density here
+  values[i] <- moran_results$I
+  
+  if (!is.na(values[i]) && values[i] > mmi) {
+    mmi <- values[i]
+    od <- distances[i]
+    neighbors <- neighbors
+    weights <- weights
+  }
+}
+cat("Maximum Moran's I:", mmi, "\n")
+cat("Optimal Distance:", od, "\n")
+
+plot(neighbors,coords, col = "red")
+
+# Compute Moran’s I
+moran_test <- moran.test(wave4$density, listw = weights, zero.policy = TRUE)
+print(moran_test)
+
+# Global Moran's I is highly significant.
+```
+
+```{r}
+wave4$spatial_lag1 <- NA
+wave4$spatial_lag2 <- NA
+wave4$spatial_lag3 <- NA
+
+weights_list <- list(
+  "A" = weights_a,
+  "D" = weights_b,
+  "F" = weights_c,
+  "H" = weights_d
+)
+
+for (s in unique(wave4$site_individual)) {
+  if (s %in% names(weights_list)) {
+    site_subset <- wave4[wave4$site_individual == s, ]
+    W <- weights_list[[s]]
+    wave4$spatial_lag1[wave4$site_individual == s] <- lag.listw(W, site_subset$density)
+    wave4$spatial_lag2[wave4$site_individual == s] <- lag.listw(W, wave4$spatial_lag1[wave4$site_individual == s])
+    wave4$spatial_lag3[wave4$site_individual == s] <- lag.listw(W, wave4$spatial_lag2[wave4$site_individual == s])
+  } else {
+    wave4$spatial_lag1[wave4$site_individual == s] <- 0
+    wave4$spatial_lag2[wave4$site_individual == s] <- 0
+    wave4$spatial_lag3[wave4$site_individual == s] <- 0
+  }
+}
+```
+
+```{r}
+
+wave4$spatial_lag1_g <- lag.listw(weights, wave4$density)
+wave4$spatial_lag2_g <- lag.listw(weights, wave4$spatial_lag1_g)
+wave4$spatial_lag3_g <- lag.listw(weights, wave4$spatial_lag2_g) 
+
+# spatial_G_NB <- glmmTMB(density ~ exposure + spatial_lag1_g + (1 | site_individual),
+#   ziformula = ~ 1,
+#   family = nbinom1,
+#   data = wave4
+# )
+# 
+# summary(spatial_G_NB)
+# spatial_G_GP <- glmmTMB(density ~ exposure + spatial_lag1_g + (1 | site_individual),
+#   ziformula = ~ 1,
+#   family = genpois,
+#   data = wave4
+# )
+
+# summary(spatial_G_GP)
+# wave4$residuals <- residuals(spatial_G_NB)
+# for (s in c("A", "D", "F", "H")) {
+#   site_subset <- wave4[wave4$site_individual == s, ]
+#   moran_test <- moran.test(site_subset$residuals, weights_list[[s]])
+#   print(paste("Moran's I for site", s, ":", moran_test$estimate["Moran I statistic"]))
+# }
+```
+
+##### VI.b. Site Specific Correlated - ZIM
+
+```{r}
+# spatial <- glmmTMB(density ~ exposure + water_depth + spatial_lag1 + (1 | site_individual),
+#   ziformula = ~ 1,
+#   family = nbinom1,
+#   data = wave4
+# )
+# 
+# # exposure, water_depth, slope_use, cost_small, fetch_projected, speed_limit
+# spatial2 <- glmmTMB(density ~ exposure + cost_small + spatial_lag1 + spatial_lag2 + spatial_lag3 + (1 | site_individual),
+#   ziformula = ~ 1,
+#   family = genpois,
+#   data = wave4
+# )
+# 
+# summary(spatial)
+# summary(spatial2)
+# 
+# wave4$residuals <- residuals(spatial)
+# 
+# for (s in c("A", "D", "F", "H")) {
+#   site_subset <- wave4[wave4$site_individual == s, ]
+#   moran_test <- moran.test(site_subset$residuals, weights_list[[s]])
+#   print(paste("Moran's I for site", s, ":", moran_test$estimate["Moran I statistic"]))
+# }
+# 
+# r.squaredGLMM(spatial)
+# wave4$predicted_count <- predict(spatial, type = "response")
+# 
+# ggplot(wave4, aes(x = predicted_count, y = density)) +
+#   geom_jitter(width = 0.2, height = 0.2, alpha = 0.4) +
+#   geom_smooth(method = "loess", color = "red") +
+#   labs(x = "Predicted Count", y = "Observed Count",
+#        title = "Observed vs. Predicted (ZINB1 Model)")
+```
+
+##### VI.c. Site Specific Correlated - Logistic Regression
+
+```{r}
+# wave4$presence_absence <- (wave4$presence_absence_sch + wave4$presence_absence_typ)
+# 
+# spatial3 <- glmmTMB(presence_absence ~ exposure + cost_small + spatial_lag1 + spatial_lag2 + spatial_lag3 + (1 | site_individual), 
+#                     data = wave4, 
+#                     family = binomial(link = "logit"))
+# 
+# summary(spatial3)
+# 
+# wave4$residuals <- residuals(spatial3)
+# 
+# for (s in c("A", "D", "F", "H")) {
+#   site_subset <- wave4[wave4$site_individual == s, ]
+#   moran_test <- moran.test(site_subset$residuals, weights_list[[s]])
+#   print(paste("Moran's I for site", s, ":", moran_test$estimate["Moran I statistic"]))
+# }
+
+# wave4$predicted_prob <- predict(spatial3, type = "response")
+# 
+# ggplot(wave4, aes(x = predicted_prob, y = presence_absence)) +
+#   geom_jitter(height = 0.05, width = 0, alpha = 0.3) +
+#   geom_smooth(method = "loess", formula = y ~ x, se = FALSE, color = "blue") +
+#   labs(x = "Predicted Probability", y = "Observed Presence (1) / Absence (0)",
+#        title = "Observed vs. Predicted (Logistic GLMM)") +
+#   theme_minimal()
+```
